kustomizations/apps/base/dashboard-grafana/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana-http-route
spec:
  parentRefs:
  - name: traefik-gateway
  hostnames:
  - grafana.noodoodle.us
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: kube-prometheus-stack-grafana
      port: 3000
    # filters:
    # - type: ExtensionRef
    #   extensionRef:
    #     kind: Middleware
    #     name: http-ip-allowlist
    #     namespace: traefik-gateway
