kustomizations/apps/base/dashboard-grafana/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`grafana.noodoodle.us`)
    middlewares:
      - name: http-ip-allowlist
        namespace: traefik-gateway
    services:
    - name: kube-prometheus-stack-grafana
      port: 80
